Check both, filename and filecontent to determine mimetype

Checking only filecontent is not enough for proper mimetypes
and can lead to strange mimetypes which mess up our content
indexing.

BUG: 353512
Reviewed by: Bhushan Shah <bshah@kde.org>, Boudhayan Gupta <bgupta@kde.org>