tests/file/indexerconfigtest.cpp
@@ -49,7 +49,7 @@ int main(int argc, char** argv)
     bool shouldIndex = config.shouldBeIndexed(url);
 
     QMimeDatabase m_mimeDb;
-    QString mimetype = m_mimeDb.mimeTypeForFile(url, QMimeDatabase::MatchContent).name();
+    QString mimetype = m_mimeDb.mimeTypeForFile(url).name();
     QString fastMimetype = m_mimeDb.mimeTypeForFile(url, QMimeDatabase::MatchExtension).name();
 
     bool shouldIndexMimetype = config.shouldMimeTypeBeIndexed(fastMimetype);
